# CUDA_Advance_Libraries

./: CMakeLists.txt  README.md  dockerfile  models.dvc  run.sh  setup.sh
.dvc/: config
.github/workflows/: ubuntu_23_04.yml
docker/: run_docker_image.sh
scripts/: download_cuda.sh  download_libtorch.sh  download_opencv.sh
src/: main.cpp  main.cpp.in
test/: CMakeLists.txt  test.cpp.in
